# graphyr

./: Cargo.toml  LICENSE  README.md
src/: container.rs  data.rs  main.rs  main_view.rs  text_input.rs  theme.rs  utils.rs  view_data.rs
src/custom_widget/: cell.rs  mod.rs  spiral_table.rs
src/data/: cell.rs  mod.rs  table.rs
src/data/configuration/: arrow.rs  layer.rs  mod.rs
