[package]
name = "graphyr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bincode = "1.3.3"
floem = { git = "https://github.com/lapce/floem", features = ["rfd-async-std", "serde"] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
uuid = { version = "1.13.1", features = ["serde", "v4"] }
