[package]
name = "graphyr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
floem = { git = "https://github.com/lapce/floem", features = [
    "rfd-async-std",
    "serde",
] }
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive", "rc"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
